Proyecto Individual/force-app/main/default/objects/User_Module__c/User_Module__c.object-meta.xml
<CustomObject>
    <label>User - Module</label>
    <nameField>
        <displayFormat>UM-{0000}</displayFormat>
        <label>User - Module Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>User - Modules</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>