Proyecto Individual/force-app/main/default/objects/User_Module__c/fields/Module__c.field-meta.xml
<CustomField>
    <fullName>Module__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Module</label>
    <referenceTo>Module__c</referenceTo>
    <relationshipLabel>User - Modules</relationshipLabel>
    <relationshipName>User_Modules</relationshipName>
    <type>Lookup</type>
</CustomField>