Proyecto Individual/force-app/main/default/objects/User_Module__c/fields/Points__c.field-meta.xml
<CustomField>
    <fullName>Points__c</fullName>
    <label>Points</label>
    <summarizedField>User_Unit__c.Points__c</summarizedField>
    <summaryForeignKey>User_Unit__c.User_Module__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>