Proyecto Individual/force-app/main/default/objects/User_Module__c/fields/Skill__c.field-meta.xml
<CustomField>
    <fullName>Skill__c</fullName>
    <formula>Text(Module__r.Skill__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Skill</label>
    <type>Text</type>
</CustomField>