Proyecto Individual/force-app/main/default/objects/User_Module__c/fields/Unit_response_quantity__c.field-meta.xml
<CustomField>
    <fullName>Unit_response_quantity__c</fullName>
    <label>Unit response quantity</label>
    <summaryFilterItems>
        <field>User_Unit__c.Status__c</field>
        <operation>equals</operation>
        <value>Success</value>
    </summaryFilterItems>
    <summaryForeignKey>User_Unit__c.User_Module__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>